<resources>
    <string name="app_name">MoreFriends</string>
    <string name="logo">logo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Forgot Password</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="Nickname">Nickname</string>
    <string name="create_account">Create Account</string>
    <string name="text">Hi Lolicon Jay!\n</string>
    <string name="buttonText">Send</string>
    <string name="action_reset">Forget Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">SI</string>
    <string name="prompt_email">Enter email</string>
    <string name="prompt_password">Enter password</string>
    <string name="plus_sign_out">Sign out</string>
    <string name="plus_disconnect">Disconnect</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="button_go">GO</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_activity_personal_info">PersonalInfo</string>
    <string name="title_activity_edit_personal_info">EditPersonalInfo</string>
    <string name="anonymous">Anonymous</string>
    <string name="comment_err">Comment should not be empty</string>
    <string name="upload_comment">Uploading comment</string>
    <string name="new_poll">New Poll</string>
    <string name="options">Options</string>
    <string name="Category">Categories</string>
    <string name="take_photo">Take photo</string>
    <string name="gallery">Choose from gallery</string>
    <string name="select_image">Select Image (Optional)</string>
    <string name="image_loading">Image is still loading&#8230;</string>
    <string name="question_empty">Question should not be empty</string>
    <string name="click_button_view_image">Click button again to view image</string>
    <string name="maximum_10">You reached the maximum of 10 options</string>
    <string name="option_empty">Option should not be empty</string>
    <string name="two_options">You should provide at least 2 options</string>
    <string name="creating_poll">Creating poll</string>
    <string name="create_success">Create poll successful</string>
    <string name="image_small">Image is too small</string>
    <string name="crop_image">Crop Image?</string>
    <string name="confirm">Confirm</string>
    <string name="discard_image">Discard Image?</string>
    <string name="delete_confirm">Delete Confirmation</string>
    <string name="delete_confirm_2">Do you really want to delete this poll?</string>
    <string name="delete">Delete</string>
    <string name="comment_2">Comment</string>
    <string name="try_again">Please try again later.</string>
    <string name="close">Close</string>
    <string name="day_ago">day ago</string>
    <string name="days_ago">days ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="minute_ago">1 minute ago</string>
    <string name="reload">Reload</string>
    <string name="submit">Submit</string>
    <string name="my_polls">My Polls</string>
    <string name="comment_0">Comment 0</string>
    <string name="enter_comment">Enter your comment</string>
    <string name="enter_question">Enter your question here</string>
    <string name="post_anon">Post as Anonymous</string>
    <string name="sort_popular">Sort by Popularity</string>
    <string name="sort_date">Sort by Date</string>
    <string name="invalid_credentials">Invalid username or password</string>
    <string name="email_taken">Email address is already taken</string>
    <string name="title_activity_edit_profile" translatable="false">EditProfileActivity</string>
    <string name="logging_in">Logging in to your account</string>
    <string name="signing_up">Signing up</string>
    <string name="title_activity_favourite" translatable="false">FavouriteActivity</string>
    <string name="image_load_err">Something went wrong. Please select your image from the gallery.</string>
    <string name="unspecified">unspecified</string>
    <string name="invalid_date">Invalid birth date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="activity">Activity</string>
    <string name="profile_dont_exist">User profile does not exist</string>
    <string name="browse_zilche">Browse Zilche</string>
    <string name="my_poll">My Polls</string>
    <string name="my_profile">My Profile</string>
    <string name="Fav">Favourite</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_info">Personal Information</string>
    <string name="intro">Intro</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="contact_info">Contact Information</string>
    <string name="login_signup">Login/Sign Up</string>
    <string name="saving">Saving</string>
    <string name="edit_intro">Edit intro</string>
    <string name="input_name">Please enter your name</string>
    <string name="title_activity_reply_comment" translatable="false">ReplyCommentActivity</string>
    <string name="reply">Reply</string>
    <string name="set_email">Set email</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="connection_err">Error connecting to server. Please try again later.</string>

    <string name="other">Other</string>
    <string name="fl_name">Please enter your first and last name</string>
    <string name="title_activity_edit_personal_info2">EditPersonalInfo2</string>
    <string name="title_activity_full_screen_image">FullScreenImage</string>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <string name="message_hint">Write something...</string>
    <string name="send">Send</string>
    <string name="profile_other">Friend Avatar</string>
    <string name="profile_me">My Avatar</string>
</resources>
