<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_gravity="center_horizontal"
                android:longClickable="false"
                android:maxLines="1"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="384dp"
                android:layout_height="168dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo"
                android:src="@drawable/fang" />

            <LinearLayout android:id="@+id/plus_sign_out_buttons"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:visibility="gone" android:weightSum="2">

                <Button android:id="@+id/plus_sign_out_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:layout_weight="1" android:text="@string/plus_sign_out" />

                <Button android:id="@+id/plus_disconnect_button"
                    style="?android:textAppearanceSmall" android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1"
                    android:text="@string/plus_disconnect" />

            </LinearLayout>

            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"
                android:weightSum="1">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

                <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_register"
                    android:id="@+id/button"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_reset"
                    android:id="@+id/button_password"
                    android:layout_gravity="right" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>



