<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:background="@color/primary"
        android:textColor="@color/icons"
        android:text="Create Account"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text=""
        android:textSize="12sp"
        android:textColor="@color/divider"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nickname"
        android:textSize="14sp"
        android:singleLine="true"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/nick_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text=""
        android:textSize="12sp"
        android:textColor="@color/divider"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="14sp"
        android:singleLine="true"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/reset_email"
        />


    <TextView
        android:layout_width="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text=""
        android:textSize="12sp"
        android:textColor="#aaaaaa"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="14sp"
        android:singleLine="true"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/new_password"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:clickable="true"
            android:paddingTop="10dp"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/create_account"
            android:textSize="15sp"/>

        />
    </LinearLayout>

</LinearLayout>