<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_keyboard_backspace_black_24dp"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/back_button" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:id="@+id/textView" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/list_button"
            android:padding="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_filter_list_black_24dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignParentRight="true"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/lvChat"
            android:transcriptMode="alwaysScroll"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/llSend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
        </ListView>
        <RelativeLayout
            android:id="@+id/llSend"
            android:layout_alignParentBottom="true"
            android:background="#ffffff"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/etMessage"
                android:layout_toLeftOf="@+id/btSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btSend"
                android:gravity="top"
                android:hint="@string/message_hint"
                android:imeOptions="actionSend"/>
            <Button
                android:id="@+id/btSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:text="@string/send"
                android:textSize="18sp" >
            </Button>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>